# wgslx

./: .clang-format  .clangd  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt
cmd/: CMakeLists.txt
cmd/src/: main.cpp
formatter/: CMakeLists.txt
formatter/include/formatter/: formatter.h
formatter/src/: formatter.cpp  formatter_test.cpp  mini_printer.cpp  mini_printer.h  operator_group.cpp  operator_group.h
minifier/: CMakeLists.txt
minifier/include/minifier/: minifier.h
minifier/src/: minifier.cpp  minifier_test.cpp  remove_useless.cpp  remove_useless.h  remove_useless_functions.cpp  remove_useless_functions.h  remover.cpp  remover.h  rename_identifiers.cpp  rename_identifiers.h  renamer.cpp  renamer.h  traverser.cpp  traverser.h
parser/: CMakeLists.txt
parser/include/parser/: parser.h
parser/src/: parser.cpp  parser_test.cpp
tools/: build_wasm.sh
writer/: CMakeLists.txt
writer/include/writer/: writer.h
writer/src/: mini_printer.cpp  mini_printer.h  operator_group.cpp  operator_group.h  writer.cpp  writer_test.cpp
